Created DataFrame using the data extracted from Coursera cloud(static data).

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -76,9 +76,348 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f059f9de-cf17-48d5-9760-8016281be408",
+   "metadata": {},
+   "source": [
+    "##### The data that is collected previously is dynamic but I want to use the static data for this project as a learner. I will use the static JSON data provided by COURSERA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "17b69cd0-ff85-4d9e-bfad-cdaaf6896891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spacex_url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/datasets/API_call_spacex_api.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a9cfe288-c826-451e-8c80-fcf1fa400366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(spacex_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4aec74d2-9617-4fd4-be2e-87084aeae0df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8a20328b-2ce2-4a29-9df2-3875b5874e66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "664a42bf-142b-4f92-a15a-4cf60a132915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the JSON data.\n",
+    "# print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6376cdb-ba82-422e-9edc-a54c9e9c61d8",
+   "metadata": {},
+   "source": [
+    "##### The JSON data contain nested structure. So, we use json_normalize method to reduce errors while using DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff32d802-89d0-4a2b-95ff-3621bec71c09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.json_normalize(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a051efd1-3e95-455b-b4b0-48fe5695b547",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>static_fire_date_utc</th>\n",
+       "      <th>static_fire_date_unix</th>\n",
+       "      <th>tbd</th>\n",
+       "      <th>net</th>\n",
+       "      <th>window</th>\n",
+       "      <th>rocket</th>\n",
+       "      <th>success</th>\n",
+       "      <th>details</th>\n",
+       "      <th>crew</th>\n",
+       "      <th>ships</th>\n",
+       "      <th>...</th>\n",
+       "      <th>links.reddit.media</th>\n",
+       "      <th>links.reddit.recovery</th>\n",
+       "      <th>links.flickr.small</th>\n",
+       "      <th>links.flickr.original</th>\n",
+       "      <th>links.presskit</th>\n",
+       "      <th>links.webcast</th>\n",
+       "      <th>links.youtube_id</th>\n",
+       "      <th>links.article</th>\n",
+       "      <th>links.wikipedia</th>\n",
+       "      <th>fairings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006-03-17T00:00:00.000Z</td>\n",
+       "      <td>1.142554e+09</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Engine failure at 33 seconds and loss of vehicle</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.youtube.com/watch?v=0a_00nJ_Y88</td>\n",
+       "      <td>0a_00nJ_Y88</td>\n",
+       "      <td>https://www.space.com/2196-spacex-inaugural-fa...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/DemoSat</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Successful first stage burn and transition to ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.youtube.com/watch?v=Lk4zQ2wP-Nc</td>\n",
+       "      <td>Lk4zQ2wP-Nc</td>\n",
+       "      <td>https://www.space.com/3590-spacex-falcon-1-roc...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/DemoSat</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Residual stage 1 thrust led to collision betwe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.youtube.com/watch?v=v0w9p3U8860</td>\n",
+       "      <td>v0w9p3U8860</td>\n",
+       "      <td>http://www.spacex.com/news/2013/02/11/falcon-1...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Trailblazer_(sat...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008-09-20T00:00:00.000Z</td>\n",
+       "      <td>1.221869e+09</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Ratsat was carried to orbit on the first succe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.youtube.com/watch?v=dLQ2tZEH6G0</td>\n",
+       "      <td>dLQ2tZEH6G0</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Ratsat</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Ratsat</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>True</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>http://www.spacex.com/press/2012/12/19/spacexs...</td>\n",
+       "      <td>https://www.youtube.com/watch?v=yTaIDooc8Og</td>\n",
+       "      <td>yTaIDooc8Og</td>\n",
+       "      <td>http://www.spacex.com/news/2013/02/12/falcon-1...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/RazakSAT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       static_fire_date_utc  static_fire_date_unix    tbd    net  window  \\\n",
+       "0  2006-03-17T00:00:00.000Z           1.142554e+09  False  False     0.0   \n",
+       "1                      None                    NaN  False  False     0.0   \n",
+       "2                      None                    NaN  False  False     0.0   \n",
+       "3  2008-09-20T00:00:00.000Z           1.221869e+09  False  False     0.0   \n",
+       "4                      None                    NaN  False  False     0.0   \n",
+       "\n",
+       "                     rocket  success  \\\n",
+       "0  5e9d0d95eda69955f709d1eb    False   \n",
+       "1  5e9d0d95eda69955f709d1eb    False   \n",
+       "2  5e9d0d95eda69955f709d1eb    False   \n",
+       "3  5e9d0d95eda69955f709d1eb     True   \n",
+       "4  5e9d0d95eda69955f709d1eb     True   \n",
+       "\n",
+       "                                             details crew ships  ...  \\\n",
+       "0   Engine failure at 33 seconds and loss of vehicle   []    []  ...   \n",
+       "1  Successful first stage burn and transition to ...   []    []  ...   \n",
+       "2  Residual stage 1 thrust led to collision betwe...   []    []  ...   \n",
+       "3  Ratsat was carried to orbit on the first succe...   []    []  ...   \n",
+       "4                                               None   []    []  ...   \n",
+       "\n",
+       "  links.reddit.media links.reddit.recovery links.flickr.small  \\\n",
+       "0               None                  None                 []   \n",
+       "1               None                  None                 []   \n",
+       "2               None                  None                 []   \n",
+       "3               None                  None                 []   \n",
+       "4               None                  None                 []   \n",
+       "\n",
+       "   links.flickr.original                                     links.presskit  \\\n",
+       "0                     []                                               None   \n",
+       "1                     []                                               None   \n",
+       "2                     []                                               None   \n",
+       "3                     []                                               None   \n",
+       "4                     []  http://www.spacex.com/press/2012/12/19/spacexs...   \n",
+       "\n",
+       "                                 links.webcast links.youtube_id  \\\n",
+       "0  https://www.youtube.com/watch?v=0a_00nJ_Y88      0a_00nJ_Y88   \n",
+       "1  https://www.youtube.com/watch?v=Lk4zQ2wP-Nc      Lk4zQ2wP-Nc   \n",
+       "2  https://www.youtube.com/watch?v=v0w9p3U8860      v0w9p3U8860   \n",
+       "3  https://www.youtube.com/watch?v=dLQ2tZEH6G0      dLQ2tZEH6G0   \n",
+       "4  https://www.youtube.com/watch?v=yTaIDooc8Og      yTaIDooc8Og   \n",
+       "\n",
+       "                                       links.article  \\\n",
+       "0  https://www.space.com/2196-spacex-inaugural-fa...   \n",
+       "1  https://www.space.com/3590-spacex-falcon-1-roc...   \n",
+       "2  http://www.spacex.com/news/2013/02/11/falcon-1...   \n",
+       "3               https://en.wikipedia.org/wiki/Ratsat   \n",
+       "4  http://www.spacex.com/news/2013/02/12/falcon-1...   \n",
+       "\n",
+       "                                     links.wikipedia fairings  \n",
+       "0              https://en.wikipedia.org/wiki/DemoSat      NaN  \n",
+       "1              https://en.wikipedia.org/wiki/DemoSat      NaN  \n",
+       "2  https://en.wikipedia.org/wiki/Trailblazer_(sat...      NaN  \n",
+       "3               https://en.wikipedia.org/wiki/Ratsat      NaN  \n",
+       "4             https://en.wikipedia.org/wiki/RazakSAT      NaN  \n",
+       "\n",
+       "[5 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First 5 rows of the DataFrame.\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90ffd448-bd95-49b6-982b-1cb49ca53e74",
+   "id": "205b3a3d-2868-4281-899d-b6def25b356e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16891759-1461-489c-a180-ddb117e8bde3",
    "metadata": {},
    "outputs": [],
    "source": []
