Filtering required columns from the dataset.

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6c9ad16c-fbff-4979-b8b9-8f155b13f617",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
+   "id": "0d07be9a-1af7-48ef-b682-b6f3cd8402d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "45907035-a54b-4a87-a914-2aaa8fa6063f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "7a6bffbd-dcd0-4716-9af3-c4ed5bb43b71",
    "metadata": {},
    "outputs": [],
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "1ff38750-6de0-459b-b8d3-bb62c5ddfdea",
    "metadata": {},
    "outputs": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "e45ca8f3-2ebb-4878-81b1-15df18b7ed95",
    "metadata": {},
    "outputs": [],
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "303120a4-d2a3-4d8a-ba29-eddc5b2e69d0",
    "metadata": {},
    "outputs": [],
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "17b69cd0-ff85-4d9e-bfad-cdaaf6896891",
    "metadata": {},
    "outputs": [],
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "a9cfe288-c826-451e-8c80-fcf1fa400366",
    "metadata": {},
    "outputs": [],
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "4aec74d2-9617-4fd4-be2e-87084aeae0df",
    "metadata": {},
    "outputs": [
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "8a20328b-2ce2-4a29-9df2-3875b5874e66",
    "metadata": {},
    "outputs": [],
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "664a42bf-142b-4f92-a15a-4cf60a132915",
    "metadata": {},
    "outputs": [],
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "ff32d802-89d0-4a2b-95ff-3621bec71c09",
    "metadata": {},
    "outputs": [],
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "a051efd1-3e95-455b-b4b0-48fe5695b547",
    "metadata": {},
    "outputs": [
@@ -396,7 +406,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,16 +418,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "205b3a3d-2868-4281-899d-b6def25b356e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['static_fire_date_utc', 'static_fire_date_unix', 'tbd', 'net', 'window',\n",
+       "       'rocket', 'success', 'details', 'crew', 'ships', 'capsules', 'payloads',\n",
+       "       'launchpad', 'auto_update', 'failures', 'flight_number', 'name',\n",
+       "       'date_utc', 'date_unix', 'date_local', 'date_precision', 'upcoming',\n",
+       "       'cores', 'id', 'fairings.reused', 'fairings.recovery_attempt',\n",
+       "       'fairings.recovered', 'fairings.ships', 'links.patch.small',\n",
+       "       'links.patch.large', 'links.reddit.campaign', 'links.reddit.launch',\n",
+       "       'links.reddit.media', 'links.reddit.recovery', 'links.flickr.small',\n",
+       "       'links.flickr.original', 'links.presskit', 'links.webcast',\n",
+       "       'links.youtube_id', 'links.article', 'links.wikipedia', 'fairings'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# columns in the data frame.\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "16891759-1461-489c-a180-ddb117e8bde3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data types of each column\n",
+    "# df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a938466e-c74e-4596-9086-922819e67ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(107, 42)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shape of the dataset.\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d3666b2-61a5-4726-bf01-83f253a16952",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "19abcac2-93b1-4fe4-8dda-e31f37c2b77f",
+   "metadata": {},
+   "source": [
+    "##### Filtering the dataset by keeping the required columns for the project."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0f6698e5-294a-48a3-b6b2-56506a9a278d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['rocket', 'payloads', 'launchpad', 'cores', 'flight_number', 'date_utc']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c481f07d-0699-4bee-a761-8775fafabce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing rows with multiple cores(rockets with extra boosters).\n",
+    "df = df[df['cores'].map(len) == 1]\n",
+    "df = df[df['payloads'].map(len) == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d4604085-4c73-459f-b8e1-745eb5d3fee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Both payloads and cores have lists as data, extracting the single value from them.\n",
+    "df['cores'] = df['cores'].map(lambda x : x[0])\n",
+    "df['payloads'] = df['payloads'].map(lambda x : x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "38eb1402-2ea5-4cd2-8831-31216496f7aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date columns contains both date and time, we need to extract date.\n",
+    "df['date'] = pd.to_datetime(df['date_utc']).dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e82bf9c0-3aa9-44bc-a3c2-d2040a49bbea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtering the launches happened before 2020-11-13.\n",
+    "df = df[df['date'] <= datetime.date(2020,11,13)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "537e355a-a966-472a-92c7-4721ab2b9dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rocket</th>\n",
+       "      <th>payloads</th>\n",
+       "      <th>launchpad</th>\n",
+       "      <th>cores</th>\n",
+       "      <th>flight_number</th>\n",
+       "      <th>date_utc</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>5eb0e4b5b6c3bb0006eeb1e1</td>\n",
+       "      <td>5e9e4502f5090995de566f86</td>\n",
+       "      <td>{'core': '5e9e289df35918033d3b2623', 'flight':...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2006-03-24T22:30:00.000Z</td>\n",
+       "      <td>2006-03-24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>5eb0e4b6b6c3bb0006eeb1e2</td>\n",
+       "      <td>5e9e4502f5090995de566f86</td>\n",
+       "      <td>{'core': '5e9e289ef35918416a3b2624', 'flight':...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2007-03-21T01:10:00.000Z</td>\n",
+       "      <td>2007-03-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>5eb0e4b7b6c3bb0006eeb1e5</td>\n",
+       "      <td>5e9e4502f5090995de566f86</td>\n",
+       "      <td>{'core': '5e9e289ef3591855dc3b2626', 'flight':...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2008-09-28T23:15:00.000Z</td>\n",
+       "      <td>2008-09-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5e9d0d95eda69955f709d1eb</td>\n",
+       "      <td>5eb0e4b7b6c3bb0006eeb1e6</td>\n",
+       "      <td>5e9e4502f5090995de566f86</td>\n",
+       "      <td>{'core': '5e9e289ef359184f103b2627', 'flight':...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2009-07-13T03:35:00.000Z</td>\n",
+       "      <td>2009-07-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5e9d0d95eda69973a809d1ec</td>\n",
+       "      <td>5eb0e4b7b6c3bb0006eeb1e7</td>\n",
+       "      <td>5e9e4501f509094ba4566f84</td>\n",
+       "      <td>{'core': '5e9e289ef359185f2b3b2628', 'flight':...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-06-04T18:45:00.000Z</td>\n",
+       "      <td>2010-06-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     rocket                  payloads  \\\n",
+       "0  5e9d0d95eda69955f709d1eb  5eb0e4b5b6c3bb0006eeb1e1   \n",
+       "1  5e9d0d95eda69955f709d1eb  5eb0e4b6b6c3bb0006eeb1e2   \n",
+       "3  5e9d0d95eda69955f709d1eb  5eb0e4b7b6c3bb0006eeb1e5   \n",
+       "4  5e9d0d95eda69955f709d1eb  5eb0e4b7b6c3bb0006eeb1e6   \n",
+       "5  5e9d0d95eda69973a809d1ec  5eb0e4b7b6c3bb0006eeb1e7   \n",
+       "\n",
+       "                  launchpad  \\\n",
+       "0  5e9e4502f5090995de566f86   \n",
+       "1  5e9e4502f5090995de566f86   \n",
+       "3  5e9e4502f5090995de566f86   \n",
+       "4  5e9e4502f5090995de566f86   \n",
+       "5  5e9e4501f509094ba4566f84   \n",
+       "\n",
+       "                                               cores  flight_number  \\\n",
+       "0  {'core': '5e9e289df35918033d3b2623', 'flight':...              1   \n",
+       "1  {'core': '5e9e289ef35918416a3b2624', 'flight':...              2   \n",
+       "3  {'core': '5e9e289ef3591855dc3b2626', 'flight':...              4   \n",
+       "4  {'core': '5e9e289ef359184f103b2627', 'flight':...              5   \n",
+       "5  {'core': '5e9e289ef359185f2b3b2628', 'flight':...              6   \n",
+       "\n",
+       "                   date_utc        date  \n",
+       "0  2006-03-24T22:30:00.000Z  2006-03-24  \n",
+       "1  2007-03-21T01:10:00.000Z  2007-03-21  \n",
+       "3  2008-09-28T23:15:00.000Z  2008-09-28  \n",
+       "4  2009-07-13T03:35:00.000Z  2009-07-13  \n",
+       "5  2010-06-04T18:45:00.000Z  2010-06-04  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16891759-1461-489c-a180-ddb117e8bde3",
+   "id": "bdbadac2-d131-4aae-b05a-3e8764fb6e9b",
    "metadata": {},
    "outputs": [],
    "source": []
