Filter DATAFRAME to include only FALCON 9 launches.

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -978,9 +978,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b8e3af3-45f2-4f5c-a346-5cac5dff22b9",
+   "metadata": {},
+   "source": [
+    "##### Filtering DataFrame to only include Falcon 9 launches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "84f91ace-6b07-4059-bb50-59bba5f7729b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_falcon9 = launch_df[launch_df['BoosterVersion'] != 'Falcon 1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "5c5d4ee4-7d53-46d0-b106-71f3c0b7f0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reset the flight number column as some records are removed.\n",
+    "data_falcon9.loc[:, 'FlightNumber'] = list(range(1, data_falcon9.shape[0]+1))\n",
+    "# data_falcon9"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc875d12-17ce-4bcc-91bd-ab19ec92752d",
+   "id": "1405989f-661f-4ad3-8b3c-abe20d200bc6",
    "metadata": {},
    "outputs": [],
    "source": []
