--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -1008,9 +1008,282 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0171d52-6c54-4889-85b6-5b930fabc54c",
+   "metadata": {},
+   "source": [
+    "#### Data Wrangling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5a80b544-99b6-462c-a1ae-4d0e69d3e6fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FlightNumber       0\n",
+       "Date               0\n",
+       "BoosterVersion     0\n",
+       "PayloadMass        5\n",
+       "Orbit              0\n",
+       "LaunchSite         0\n",
+       "Outcome            0\n",
+       "Flights            0\n",
+       "GridFins           0\n",
+       "Reused             0\n",
+       "Legs               0\n",
+       "LandingPad        26\n",
+       "Block              0\n",
+       "ReusedCount        0\n",
+       "Serial             0\n",
+       "Longitude          0\n",
+       "Latitude           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_falcon9.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff5cf652-96f2-4d64-8efa-c26e743e6d9c",
+   "metadata": {},
+   "source": [
+    "##### We need to handle the missing values in PayloadMass. As for landingPad we need null values to represent when landing pads were not used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bf72a587-b398-46fc-9c76-d93734afef6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yagne\\AppData\\Local\\Temp\\ipykernel_13232\\3230995889.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_falcon9['PayloadMass'] = data_falcon9['PayloadMass'].fillna(payload_mean)\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' Dealing with missing values in PayloadMass column. '''\n",
+    "\n",
+    "# calculate the mean value of PayloadMass.\n",
+    "payload_mean = data_falcon9['PayloadMass'].mean()\n",
+    "# Replae np.nan values with its mean value.\n",
+    "data_falcon9['PayloadMass'] = data_falcon9['PayloadMass'].fillna(payload_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "710b06c6-a5be-4742-a3d9-994d7c64104c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>BoosterVersion</th>\n",
+       "      <th>PayloadMass</th>\n",
+       "      <th>Orbit</th>\n",
+       "      <th>LaunchSite</th>\n",
+       "      <th>Outcome</th>\n",
+       "      <th>Flights</th>\n",
+       "      <th>GridFins</th>\n",
+       "      <th>Reused</th>\n",
+       "      <th>Legs</th>\n",
+       "      <th>LandingPad</th>\n",
+       "      <th>Block</th>\n",
+       "      <th>ReusedCount</th>\n",
+       "      <th>Serial</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-06-04</td>\n",
+       "      <td>Falcon 9</td>\n",
+       "      <td>6123.547647</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>CCSFS SLC 40</td>\n",
+       "      <td>None None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>B0003</td>\n",
+       "      <td>-80.577366</td>\n",
+       "      <td>28.561857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2012-05-22</td>\n",
+       "      <td>Falcon 9</td>\n",
+       "      <td>525.000000</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>CCSFS SLC 40</td>\n",
+       "      <td>None None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>B0005</td>\n",
+       "      <td>-80.577366</td>\n",
+       "      <td>28.561857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-03-01</td>\n",
+       "      <td>Falcon 9</td>\n",
+       "      <td>677.000000</td>\n",
+       "      <td>ISS</td>\n",
+       "      <td>CCSFS SLC 40</td>\n",
+       "      <td>None None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>B0007</td>\n",
+       "      <td>-80.577366</td>\n",
+       "      <td>28.561857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-09-29</td>\n",
+       "      <td>Falcon 9</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>PO</td>\n",
+       "      <td>VAFB SLC 4E</td>\n",
+       "      <td>False Ocean</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>B1003</td>\n",
+       "      <td>-120.610829</td>\n",
+       "      <td>34.632093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2013-12-03</td>\n",
+       "      <td>Falcon 9</td>\n",
+       "      <td>3170.000000</td>\n",
+       "      <td>GTO</td>\n",
+       "      <td>CCSFS SLC 40</td>\n",
+       "      <td>None None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>B1004</td>\n",
+       "      <td>-80.577366</td>\n",
+       "      <td>28.561857</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber        Date BoosterVersion  PayloadMass Orbit    LaunchSite  \\\n",
+       "4             1  2010-06-04       Falcon 9  6123.547647   LEO  CCSFS SLC 40   \n",
+       "5             2  2012-05-22       Falcon 9   525.000000   LEO  CCSFS SLC 40   \n",
+       "6             3  2013-03-01       Falcon 9   677.000000   ISS  CCSFS SLC 40   \n",
+       "7             4  2013-09-29       Falcon 9   500.000000    PO   VAFB SLC 4E   \n",
+       "8             5  2013-12-03       Falcon 9  3170.000000   GTO  CCSFS SLC 40   \n",
+       "\n",
+       "       Outcome  Flights  GridFins  Reused   Legs LandingPad  Block  \\\n",
+       "4    None None        1     False   False  False       None    1.0   \n",
+       "5    None None        1     False   False  False       None    1.0   \n",
+       "6    None None        1     False   False  False       None    1.0   \n",
+       "7  False Ocean        1     False   False  False       None    1.0   \n",
+       "8    None None        1     False   False  False       None    1.0   \n",
+       "\n",
+       "   ReusedCount Serial   Longitude   Latitude  \n",
+       "4            0  B0003  -80.577366  28.561857  \n",
+       "5            0  B0005  -80.577366  28.561857  \n",
+       "6            0  B0007  -80.577366  28.561857  \n",
+       "7            0  B1003 -120.610829  34.632093  \n",
+       "8            0  B1004  -80.577366  28.561857  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_falcon9.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1405989f-661f-4ad3-8b3c-abe20d200bc6",
+   "id": "19bf85fa-8f3b-4d83-b3c0-069ab19a7b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ad01ce-69a7-41f3-8a9f-a843757bf9fa",
    "metadata": {},
    "outputs": [],
    "source": []
